tests/paczka1/fuzzy1/66346088.err
Error in line 2: 6lF0omO7ES A56 74,8
Error in line 4: LPxsxe SÝ53 72,5
Error in line 5: AsG S853 31,3
Error in line 21: 6lF0omO7ES S37 89,4
Error in line 9: LPxsxe A56 20,2
Error in line 17: LhevvDu S853 18,7
Error in line 24: 6lF0omO7ES S853 65,4
Error in line 23: 9vHW S37 1,7
Error in line 31: 6lF0omO7ES S37 91,0
